# OpenCV-CProject

./: CMakeCache.txt  CMakeLists.txt  Makefile  MyApp  MyOpenCVProject  cmake_install.cmake  main.cpp  reader  reader.cpp  writer  writer.cpp  wxmain.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
